feat: implement api get permissions
